--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 html,
